--- a/ind.html
+++ b/ind.html
@@ -19,19 +19,17 @@
     <main>
         <section id="about">
             <h2>О себе</h2>
-            <p>Журавлева Евгения Дмитриевна</p>
-            <p>18.07.2005</p>
-            <p>Студентка Государственного Университета "Дубна"</p>
-            <p>Институт Системного анализа и управления</p>
-            <p>Бизнес-информатика</p>
-            <p>группа 2271</p>
+            <p>Здравствуйте!</p>
+            <p>Я - Журавлева Евгения, студентка 2 курса Государственного Университета "Дубна" Института Системного анализа и управления направления Бизнес-информатика группы 2271</p>
+            <p>Я из маленького города в Тверской области, но это не мешает мне учиться и развиваться в сферах IT и бизнеса.</p>
+            <p>Осваиваю новейшие информационные технологии, работаю с Генеративным Искусственным Интелектом и такими платформами, как: YouGile и GitHub </p>
         </section>
+        
         <section id="competencies">
             <h2>Компетенции</h2>
             <p>Отрисовка процессов и схем: Diagrams(draw.io)</p> 
             <p>Экранные формы: Figma</p>
             <p>Инструменты разработки: PyCharm, Visual Studio Code</p>
-            <p>YouGile и GitHub</p>
         </section>
     </main>
     <footer>
