--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -4,18 +4,20 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <header>
-        <h1>Портфолио</h1>
+    <header class="header">
+        <div class="header-content">
+            <h1>Портфолио</h1>
+        </div>
     </header>
 
     <nav>
-        <ul>
-            <li><a href="../ind.html"><img src="../images/лого.jpg" alt="Логотип"></a></li>
-            <li><a href="../ind.html">О себе</a></li>
-            <li><a href="summary.html">Резюме</a></li>
-            <li><a href="portfolio.html">Портфолио</a></li>
-            <li><a href="../ind.html#competencies">Компетенции</a></li>
-            <li><a href="contact.html">Контакты</a></li>
+        <ul class="nav-flex">
+            <li class="nav-flex-item-logo"><a href="../ind.html"><img src="../images/лог.png" alt="Логотип"></a></li>
+            <li class="nav-flex-item"><a href="../ind.html">О себе</a></li>
+            <li class="nav-flex-item"><a href="summary.html">Резюме</a></li>
+            <li class="nav-flex-item"><a href="portfolio.html">Портфолио</a></li>
+            <li class="nav-flex-item"><a href="../ind.html#competencies">Компетенции</a></li>
+            <li class="nav-flex-item"><a href="contact.html">Контакты</a></li>
         </ul>
     </nav>
 
