--- a/ind.html
+++ b/ind.html
@@ -5,7 +5,8 @@
 <body>
     <header class="header">
         <div class="header-content">
-            <h1>Персональный сайт Евгении Журавлевой | Веб-технологии</h1>
+            <h1>Персональный сайт Евгении Журавлевой</h1> 
+            <h1> Веб-технологии</h1>
         </div>
     </header>
     <nav>
@@ -25,7 +26,7 @@
                 <div class="about-me-content">
                     <div class="text-content">
                         <p class="text">Всем привет!</p>
-                        <p class="text">Я - Женя, студентка <a href="https://www.uni-dubna.ru/" target="_blank"><b>Государственного Университета "Дубна"</b></a>, Института системного анализа и управления. Сейчас учусь на 2 курсе направления Бизнес-информатика.</p>
+                        <p class="text">Я - Женя, студентка <a class="custom-link" href="https://www.uni-dubna.ru/" target="_blank"><b>Государственного Университета "Дубна"</b></a>, Института системного анализа и управления. Сейчас учусь на 2 курсе направления Бизнес-информатика.</p>
                         <p class="text">В свободное от учёбы время люблю читать книги, гулять и узнавать что-то новое.</p>
                         <p class="text">В будущем вижу себя специалистом, эффективно сочетающим IT и бизнес для инновационных решений.</p>
                     </div>
@@ -46,7 +47,7 @@
                             <div class="competence">
                                 <a href="https://www.figma.com/" target="_blank">
                                     <img src="images/фигма.png" alt="Логотип 1" class="competence-logo">
-                                  </a>
+                                </a>
                                 <p class="text"><b>Figma</b></p>
                             </div>
                         </td>
@@ -80,6 +81,43 @@
                                     <img src="images/sspose.png" alt="Логотип 5" class="competence-logo">
                                 </a>
                                 <p class="text"><b>Диаграммы BPMN</b></p>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="competence">
+                                <a href="https://tilda.cc/ru/" target="_blank">
+                                    <img src="images/tilda.png" alt="Логотип 5" class="competence-logo">
+                                </a>
+                                <p class="text"><b>Tilda</b></p>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                        </td>
+                        
+                        <td>
+                            <div class="competence">
+                                <a href="https://www.w3.org/Style/CSS/Overview.en.html" target="_blank">
+                                    <img src="images/css1.png" alt="Логотип 6" class="competence-logo">
+                                </a>
+                                <p class="text"><b>CSS</b></p>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="competence">
+                                <a href="https://html.spec.whatwg.org/multipage/" target="_blank">
+                                    <img src="images/HTML.png" alt="Логотип 7" class="competence-logo">
+                                </a>
+                                <p class="text"><b>HTML</b></p>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="competence">
+                                <a href="https://www.python.org/" target="_blank">
+                                    <img src="images/python.png" alt="Логотип 8" class="competence-logo">
+                                </a>
+                                <p class="text"><b>Python</b></p>
                             </div>
                         </td>
                     </tr>
