--- a/pages/summary.html
+++ b/pages/summary.html
@@ -26,8 +26,52 @@
 
     <main>
         <section>
-            <h2>Резюме</h2>
-            <p>Ознакомиться можно на сайте <b>HeadHunter</b></p>
+            <div class="resume">
+                <h1>Резюме</h1>
+                    <table>
+                        <tr>
+                            <th>Годы</th>
+                            <th>Место работы (учебы)</th>
+                            <th>Должность</th>
+                            <th>Должностные обязанности</th>
+                        </tr>
+                        <tr>
+                            <td>2012-2023</td>
+                            <td>МОУ «Гимназия №2»</td>
+                            <td>Школьник</td>
+                            <td>Получение среднего общего образования</td>
+                        </tr>
+                        <tr>
+                            <td>2020-2021</td>
+                            <td>МАУ «З/Л «САЛЮТ»</td>
+                            <td>Вожатый</td>
+                            <td>Организация и проведение занятий, игр и мероприятий, обеспечение безопасности детей, контроль за соблюдением режима дня и помощь в адаптации новых участников</td>
+                        </tr>
+                        <tr>
+                            <td>2023-2027</td>
+                            <td>Государственный Университет «Дубна»</td>
+                            <td>Студент</td>
+                            <td>Обучение по направлению Бизнес-информатика</td>
+                        </tr>
+                        <tr>
+                            <td>2024-2025</td>
+                            <td>«Цифровые кафедры» ТГУ</td>
+                            <td>Контент-продюсер</td>
+                            <td>Обучение по специальности контент-продюсер</td>
+                        </tr>
+                        <tr>
+                            <td>2023-настоящее время</td>
+                            <td>Фриланс</td>
+                            <td>Контент-дизайнер</td>
+                            <td>Создание и оформление визуального контента, подбор и редактирование изображений, разработка инфографики, оформление текста, мониторинг трендов, сотрудничество с командой, обеспечение соответствия фирменному стилю</td>
+                        </tr>
+                        <tr>
+                            <td>2024</td>
+                            <td>СК «Олимп»</td>
+                            <td>Волонтер</td>
+                            <td>Организация и контроль участия в тестах по физической подготовке, оказание помощи участникам, поддержание порядка и обеспечение безопасности на площадке</td>
+                        </tr>
+                    </table>
         </section>
     </main>
 
